Add logic with getting started

--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -32,6 +32,9 @@
                 <input type="submit" value="Sign in"/>
             </form>
         </div>
+        <div style="width: 50%; float: right; margin-top: 3%">
+            <a th:href="@{/}">Getting Started</a>
+        </div>
     </div>
 </div>
 </body>
