--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -11,6 +11,10 @@
 <body>
 <div class="container">
     <div class="container-fluid">
+        <div class="col-sm-12 header" id="header">
+            <h2 id="site-name">Exam system</h2>
+            <h4 id="site-slogan">Take exams with pleasure</h4>
+        </div>
         <div class="row" style="width: 30%; float: left">
             <div th:if="${param.error}">
                 Invalid username and password
