--- a/src/main/webapp/templates/student/register.html
+++ b/src/main/webapp/templates/student/register.html
@@ -3,7 +3,6 @@
 <head>
     <title>Sign Up</title>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"/>
@@ -29,27 +28,31 @@
                     <span class="help-inline" th:errors="*{username}">[Errors]</span>
                 </div>
             </div>
-            <div class="control-group" style="margin: 1ch">
+            <div class="control-group" th:classappend="${#fields.hasErrors('username')} ? error"
+                 style="margin: 1ch" id="password">
                 <label class="control-label">Password:</label>
                 <div class="controls">
                     <input type="password" th:field="*{password}">
                 </div>
             </div>
-            <div class="control-group" style="margin: 1ch">
+            <div class="control-group" th:classappend="${#fields.hasErrors('username')} ? error"
+                 style="margin: 1ch" id="name">
                 <label class="control-label">Name:</label>
                 <div class="controls">
                     <input type="text" th:field="*{name}">
                 </div>
             </div>
-            <div class="control-group" style="margin: 1ch">
+            <div class="control-group" th:classappend="${#fields.hasErrors('username')} ? error"
+                 style="margin: 1ch" id="surname">
                 <label class="control-label">Surname:</label>
                 <div class="controls">
                     <input type="text" th:field="*{surname}">
                 </div>
             </div>
-            <div class="form-actions" style="margin: 2ch">
+            <div class="form-actions" style="margin: 1ch">
                 <button type="submit">Sign up</button>
             </div>
+
         </form>
     </div>
 </div>
